// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WithRenderProps 1`] = `
<div>
  <div
    style={
      Object {
        "backgroundColor": "cornflowerblue",
      }
    }
  >
    Today's Date: 
    5/2 4:20
  </div>
  <div />
</div>
`;

exports[`WithVariants 1`] = `
<div>
  <div
    style={
      Object {
        "backgroundColor": "coral",
      }
    }
  >
    DisplayName: 
    ExampleComponent
     Variant: 
    0
     Time: 
    20
     Variant Render Count: 
    1
     All Variants Render Count: 
    0
  </div>
  <div
    style={
      Object {
        "backgroundColor": "turquoise",
      }
    }
  >
    DisplayName: 
    ExampleComponent1
     Variant: 
    1
     Time: 
    20
     Variant Render Count: 
    1
  </div>
  <div
    style={
      Object {
        "backgroundColor": "cornsilk",
      }
    }
  >
    DisplayName: 
    ExampleComponent2
     Variant: 
    2
     Time: 
    20
     Variant Render Count: 
    1
  </div>
  <div />
</div>
`;
